--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
     },
     "dependencies": {
         "eslint": "^7.32.0",
-        "prettier": "2.3.2"
+        "prettier": "2.3.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     },
     "devDependencies": {
         "@types/node": "^18.7.13",
+        "@types/react": "^18.2.48",
+        "@types/react-dom": "^18.2.18",
+        "@vitejs/plugin-react": "^4.2.1",
+        "eslint": "^8.56.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-react": "^7.33.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.5",
         "path": "^0.12.7",
         "typescript": "^4.8.2",
         "vite": "^3.0.9"
