--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
         "lint:prettier": "prettier './' --write"
     },
     "dependencies": {
+        "classnames": "^2.5.1",
+        "less": "^4.2.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "usehooks-ts": "^2.10.0"
     },
     "devDependencies": {
-        "prettier": "2.3.2",
         "@types/node": "^18.7.13",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
@@ -25,6 +27,7 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.5",
         "path": "^0.12.7",
+        "prettier": "2.3.2",
         "typescript": "^4.8.2",
         "vite": "^3.0.9"
     }
