--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "dependencies": {
         "classnames": "^2.5.1",
         "less": "^4.2.0",
+        "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "usehooks-ts": "^2.10.0"
+        "usehooks-ts": "^2.10.0",
+        "vue": "^3.4.19"
     },
     "devDependencies": {
+        "@types/lodash": "^4.14.202",
         "@types/node": "^18.7.13",
         "@types/react": "^18.2.48",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4.2.1",
+        "@vitejs/plugin-vue": "^5.0.4",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.33.2",
@@ -29,6 +33,6 @@
         "path": "^0.12.7",
         "prettier": "2.3.2",
         "typescript": "^4.8.2",
-        "vite": "^3.0.9"
+        "vite": "^5.1.4"
     }
 }
