--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4.2.1",
         "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.17",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-react": "^7.33.2",
